src/components/layout/layout.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Quicksand:wght@300;400&display=swap');

/* 
font-family: 'Press Start 2P', cursive;
font-family: 'Quicksand', sans-serif; 
*/

/* 
main background color #FAF0E3;
old background color #faebd7;

aquamarine #7fffd4; 

easy-pink #FAD7CA;
pink-pink #ffc0cb;
*/

:root {
    --bg-color: #FAF0E3;
    --bg-color: hsl(30, 50%, 94%);  

    --grid-clr: grey;
    --aqua: #7fffd4;
    --e-pink: #FAD7CA;
    --p-pink: #ffc0cb;

    --ff-main: 'Quicksand', sans-serif;
    --ff-8bit: 'Press Start 2P', cursive;

    --invert: invert(0%);

    --img-filter: hue-rotate(0deg) brightness(1);

    /* color: hsl(290, 100%, 25%); */
}


/* @media (prefers-color-scheme: dark) {
    :root {
        color:orangered;
        color: hsl(290, 100%, 60%);
        color: white;
        
        --bg-color: #333333;
        --bg-color: #1b1b1b;
    
        --grid-clr: hsl(290, 100%, 25%);
        --grid-clr: hsl(0, 0%, 50%);

    }
} */

.monoSvg {
    filter: var(--invert);
}

.themeToggle {
    position: absolute;
    top: 181px;
    left: 21px;
    width: 79px;
    height: 78px;
    margin: 0;
    padding: 10px;
    background-color: var(--bg-color);
    border: none;
    /* background: violet;
    border-radius: 50%; */
    cursor: pointer;
}

.moonSvg {
    width: 100%;
    height: 100%;
    /* background-color: var(--bg-color); */
    filter: var(--invert);
    transition: 300ms ease-in-out;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-size: 16px;
    /* color: blueviolet;
    color: white;
    color: orangered; */
}

body {
    font-family: 'Quicksand', sans-serif; 
    font-family: var(--ff-main);
    background-color: var(--bg-color);
}

.wrapper__outer {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    height: auto;
    /* background:yellow;     */

    --bg-color: #FAF0E3;
    --bg-color: hsl(30, 50%, 94%);  

    --grid-clr: grey;
    --aqua: #7fffd4;
    --e-pink: #FAD7CA;
    --p-pink: #ffc0cb;

    --ff-main: 'Quicksand', sans-serif;
    --ff-8bit: 'Press Start 2P', cursive;
}

.wrapper {
    width: 320px;
    height: 100%;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    position: relative;  
    /* delete position: relative once theme toggle is solved */
}

p {
    line-height: 1.3rem;
}


@media screen and (min-width: 375px) {
    .wrapper {
        width: 360px;
    }
}

@media screen and (min-width: 414px) {
    .wrapper {
        width: 400px;
    }
}

@media screen and (min-width: 750px) {
    .wrapper {
        width: 680px;
        margin: 24px auto;
    }

    .themeToggle {
        top: 221px;
        left: 601px;
    }
}

@media screen and (min-width: 1000px) {
    .wrapper {
        width: 920px;
    }

    .themeToggle {
        left: 841px;
    }
}

@media screen and (min-width: 1440px) {
    .wrapper {
        width: 1440px;
    }
}

